--- a/docker/stack/Taskfile.yml
+++ b/docker/stack/Taskfile.yml
@@ -479,10 +479,10 @@ tasks:
           echo "❌ Timeout atteint ({{.TIMEOUT}}s). Tous les services ne sont pas encore en bonne santé."
           echo ""
           echo "📋 État final de tous les services :"
-          docker service ls --filter "label=com.docker.stack.namespace={{.STACK_NAME}}" --format "table {{.Name}}\t{{.Replicas}}\t{{.Image}}"
+          docker service ls --filter "label=com.docker.stack.namespace={{.STACK_NAME}}" --format "table {{`{{.Name}}`}}\t{{`{{.Replicas}}`}}\t{{`{{.Image}}`}}"
           echo ""
           echo "📋 État détaillé des tâches :"
-          docker stack ps {{.STACK_NAME}} --format "table {{.Name}}\t{{.CurrentState}}\t{{.DesiredState}}\t{{.Error}}"
+          docker stack ps {{.STACK_NAME}} --format "table {{`{{.Name}}`}}\t{{`{{.CurrentState}}`}}\t{{`{{.DesiredState}}`}}\t{{`{{.Error}}`}}"
           exit 1
         fi
         
@@ -505,7 +505,7 @@ tasks:
             service_full_name="{{.STACK_NAME}}_${service_short_name}"
             
             # Vérifier que le service existe
-            if ! docker service ls --filter "name=$service_full_name" --format "{{.Name}}" | grep -q "^$service_full_name$"; then
+            if ! docker service ls --filter "name=$service_full_name" --format "{{`{{.Name}}`}}" | grep -q "^$service_full_name$"; then
               echo "❌ Service '$service_full_name' non trouvé dans la stack"
               continue
             fi
@@ -513,8 +513,8 @@ tasks:
             expected_running=$((expected_running + 1))
             
             # Obtenir l'état des tâches pour ce service
-            task_states=$(docker service ps $service_full_name --format "{{.CurrentState}}" --no-trunc)
-            replicas=$(docker service ls --filter "name=$service_full_name" --format "{{.Replicas}}")
+            task_states=$(docker service ps $service_full_name --format "{{`{{.CurrentState}}`}}" --no-trunc)
+            replicas=$(docker service ls --filter "name=$service_full_name" --format "{{`{{.Replicas}}`}}")
             
             # Vérifier si le service a des tâches dans les états à exclure
             if echo "$task_states" | grep -E "($exclude_pattern)" >/dev/null 2>&1; then
@@ -530,7 +530,7 @@ tasks:
               service_details="$service_details $service_short_name"
             else
               # Vérifier s'il y a des erreurs
-              if docker service ps $service_full_name --format "{{.Error}}" | grep -v "^$" >/dev/null 2>&1; then
+              if docker service ps $service_full_name --format "{{`{{.Error}}`}}" | grep -v "^$" >/dev/null 2>&1; then
                 error_count=$((error_count + 1))
                 error_services="$error_services $service_short_name"
               else
@@ -541,7 +541,7 @@ tasks:
           done
         else
           # Mode tous les services : analyser tous les services de la stack
-          total_services=$(docker service ls --filter "label=com.docker.stack.namespace={{.STACK_NAME}}" --format "{{.Name}}" | wc -l)
+          total_services=$(docker service ls --filter "label=com.docker.stack.namespace={{.STACK_NAME}}" --format "{{`{{.Name}}`}}" | wc -l)
           
           if [ $total_services -eq 0 ]; then
             echo "❌ Aucun service trouvé dans la stack '{{.STACK_NAME}}'"
@@ -549,12 +549,12 @@ tasks:
           fi
 
           # Analyser chaque service
-          for service_name in $(docker service ls --filter "label=com.docker.stack.namespace={{.STACK_NAME}}" --format "{{.Name}}"); do
+          for service_name in $(docker service ls --filter "label=com.docker.stack.namespace={{.STACK_NAME}}" --format "{{`{{.Name}}`}}"); do
             # Obtenir les informations détaillées du service
-            replicas=$(docker service ls --filter "name=$service_name" --format "{{.Replicas}}")
+            replicas=$(docker service ls --filter "name=$service_name" --format "{{`{{.Replicas}}`}}")
             
             # Obtenir l'état des tâches pour ce service
-            task_states=$(docker service ps $service_name --format "{{.CurrentState}}" --no-trunc)
+            task_states=$(docker service ps $service_name --format "{{`{{.CurrentState}}`}}" --no-trunc)
             
             # Analyser l'état du service
             service_short_name=$(echo "$service_name" | sed "s/^{{.STACK_NAME}}_//")
@@ -574,7 +574,7 @@ tasks:
               service_details="$service_details $service_short_name"
             else
               # Vérifier s'il y a des erreurs
-              if docker service ps $service_name --format "{{.Error}}" | grep -v "^$" >/dev/null 2>&1; then
+              if docker service ps $service_name --format "{{`{{.Error}}`}}" | grep -v "^$" >/dev/null 2>&1; then
                 error_count=$((error_count + 1))
                 error_services="$error_services $service_short_name"
               else
@@ -592,7 +592,7 @@ tasks:
         if [ "$check_mode" = "specific" ]; then
           echo "   🎯 Services ciblés: $(echo "{{.SPECIFIC_SERVICES}}" | tr ',' ' ' | wc -w) | Actifs attendus: $expected_running"
         else
-          total_services_in_stack=$(docker service ls --filter "label=com.docker.stack.namespace={{.STACK_NAME}}" --format "{{.Name}}" | wc -l)
+          total_services_in_stack=$(docker service ls --filter "label=com.docker.stack.namespace={{.STACK_NAME}}" --format "{{`{{.Name}}`}}" | wc -l)
           echo "   📊 Total: $total_services_in_stack services | Actifs attendus: $expected_running"
         fi
         
@@ -632,9 +632,9 @@ tasks:
               service_short_name=$(echo "$service_short_name" | xargs)
               service_full_name="{{.STACK_NAME}}_${service_short_name}"
               
-              if docker service ls --filter "name=$service_full_name" --format "{{.Name}}" | grep -q "^$service_full_name$"; then
-                replicas=$(docker service ls --filter "name=$service_full_name" --format "{{.Replicas}}")
-                task_state=$(docker service ps $service_full_name --format "{{.CurrentState}}" --no-trunc | head -n 1)
+              if docker service ls --filter "name=$service_full_name" --format "{{`{{.Name}}`}}" | grep -q "^$service_full_name$"; then
+                replicas=$(docker service ls --filter "name=$service_full_name" --format "{{`{{.Replicas}}`}}")
+                task_state=$(docker service ps $service_full_name --format "{{`{{.CurrentState}}`}}" --no-trunc | head -n 1)
                 
                 # Ignorer les services exclus dans l'affichage
                 if echo "$task_state" | grep -E "($exclude_pattern)" >/dev/null 2>&1; then
@@ -648,9 +648,9 @@ tasks:
             done
           else
             # Afficher tous les services de la stack
-            for service_name in $(docker service ls --filter "label=com.docker.stack.namespace={{.STACK_NAME}}" --format "{{.Name}}"); do
-              replicas=$(docker service ls --filter "name=$service_name" --format "{{.Replicas}}")
-              task_state=$(docker service ps $service_name --format "{{.CurrentState}}" --no-trunc | head -n 1)
+            for service_name in $(docker service ls --filter "label=com.docker.stack.namespace={{.STACK_NAME}}" --format "{{`{{.Name}}`}}"); do
+              replicas=$(docker service ls --filter "name=$service_name" --format "{{`{{.Replicas}}`}}")
+              task_state=$(docker service ps $service_name --format "{{`{{.CurrentState}}`}}" --no-trunc | head -n 1)
               service_short_name=$(echo "$service_name" | sed "s/^{{.STACK_NAME}}_//")
               
               # Ignorer les services exclus
