feat: Add debug output for service health checks to aid troubleshooting

--- a/docker/stack/Taskfile.yml
+++ b/docker/stack/Taskfile.yml
@@ -662,6 +662,14 @@ tasks:
             done
           fi
           break
+        else
+          # Debug: afficher pourquoi on n'a pas atteint le succès
+          if [ $running_count -ne $expected_running ]; then
+            echo "   🔍 Debug: Services en cours ($running_count) ≠ Services attendus ($expected_running)"
+          fi
+          if [ $error_count -ne 0 ]; then
+            echo "   🔍 Debug: Services en erreur ($error_count) > 0"
+          fi
         fi
         
         echo ""
